--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
     max-width: 1140px;
     margin: 0px auto;
 }
+li {
+    list-style: none;
+}
 h2 {
     font-size: 36px;
     font-weight: normal;
@@ -400,4 +403,274 @@ header .container ul li a.active {
     text-align: center;
     margin-top: 30px;
     
+}
+/** what we do **/
+
+#what-we-do {
+    padding-top: 80px;
+    padding-bottom: 70px;
+}
+#what-we-do h2 {
+    margin-bottom: 90px;
+    font-size: 36px;
+    color: #292f36;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+#what-we-do ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+#what-we-do ul li{
+    width: calc((100%-90px)/4);
+    margin-bottom: 88px;
+}
+#what-we-do ul li::before {
+    content: ' ';
+    display: block;
+    height: 48px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#what-we-do ul li:nth-child(1)::before{
+    background-image: url(images/pencil.png);
+}
+#what-we-do ul li:nth-child(2)::before{
+    background-image: url(images/mobile.png);
+}
+#what-we-do ul li:nth-child(3)::before{
+    background-image: url(images/cogs.png);
+}
+#what-we-do ul li:nth-child(4)::before{
+    background-image: url(images/clock.png);
+}
+#what-we-do ul li:nth-child(5)::before{
+    background-image: url(images/pencil.png);
+}
+#what-we-do ul li:nth-child(6)::before{
+    background-image: url(images/mobile.png);
+}
+#what-we-do ul li:nth-child(7)::before{
+    background-image: url(images/cogs.png);
+}
+#what-we-do ul li:nth-child(8)::before{
+    background-image: url(images/clock.png);
+}
+#what-we-do ul li h4 {
+    font-size: 17px;
+    line-height: 17px;
+    text-align: center;
+    color: #292f36;
+    text-transform: uppercase;
+    font-weight: normal;
+    margin-top: 35px;
+    margin-bottom: 25px;
+}
+#what-we-do ul li p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #8d8f92;
+    text-align: center;
+}
+/** features **/
+#features {
+    padding-top: 85px;
+    padding-bottom: 115px;
+    background-color: #3a454d;
+}
+#features h2 {
+    color: white;
+    text-transform : uppercase;
+    margin-bottom: 60px;
+}
+#features h2.has-first-block:before {
+    background-color: #4e5a62;
+}
+#features-list {
+    display: flex;
+    justify-content: space-between;
+}
+#features-list div{
+    width: calc((100%-60px)/3);
+}
+#features-list div img {
+    max-width: 100%;
+}
+#features-list div h4 {
+    color: white;
+    font-size: 18px;
+    font-weight: normal;
+    font-weight: 42px;
+    text-transform: uppercase;
+    margin-top: 42px;
+    margin-bottom: 14px;
+}
+#features-list div p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #dcdfe1;
+}
+/**contact**/
+#contact {
+    padding-top: 64px;
+    position: relative;
+    padding-bottom: 112px;
+}
+#contact #contact-info {
+    z-index: 2;
+    margin-top: -130px;
+    display: flex;
+}
+#contact h2 {
+    text-transform: uppercase;
+    color : #292f36;
+    margin-bottom: 60px;
+}
+#map {
+    height: 346px;
+    top: 160px;
+    background-image: url(images/pic3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+#contact #contact-info > div,
+#contact #contact-info > form {
+    width: calc((100%-30px)/2);
+}
+#contact #contact-info > div {
+    padding-top: 187px;
+}
+
+#contact-info div h4 {
+    color: #292f36;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: normal;
+    margin-bottom: 33px;
+}
+#contact-info div p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #8d8f92;
+    margin-bottom: 26px;
+}
+#contact-info form {
+    background-color: white;
+    padding: 30px;
+}
+#contact-info form > div {
+    margin-bottom: 30px;
+}
+#contact-info form .two-col {
+    display: flex;
+    justify-content: space-between;
+}
+#contact-info form .two-col div{
+    width: calc( (100%-16px) / 2);
+    
+}
+#contact-info form .two-col div:nth-child(1){
+    margin-right: 16px;
+}
+#contact-info form label {
+    display: block;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 14px;
+    color: #8d8f92;
+    margin-bottom: 10px;
+    padding-left: 8px;
+}
+#contact-info form input,
+#contact-info form textarea {
+    width: 100%;
+    background-color: #eaeef1;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    /* padding: 12px; */
+    font-size: 20px;
+    line-height: 44px;
+}
+#contact-info form input {
+    padding: 0px 22px;
+    line-height: 44px;
+}
+#contact-info form textarea {
+    padding: 22px;
+    max-height: 160px;
+}
+#contact-info form div button {
+    background-color: #23b7a4;
+    border: none;
+    color: white;
+    text-transform: uppercase;
+    height: 44px;
+    line-height: 44px;
+    padding: 0px 26px;
+    border-radius: 3px;
+    font-size: 14px;
+    cursor: pointer;
+}
+#contact-info form div button:hover {
+    background-color: #1b9182;
+}
+/**footer**/
+footer {
+    background-color: #3a454d;
+    height: 95px;
+    line-height: 95px;
+    
+}
+footer p {
+    font-size: 14px;
+    color: white;
+}
+footer div {
+    display: flex;
+    justify-content: space-between;
+}
+footer ul li {
+    display: inline-block;
+    margin-left: 10px;
+}
+footer ul li a {
+    text-indent: -1000000px;
+    display: inline-block;
+    height: 30px;
+    background-repeat: no-repeat;
+    background-size: auto 18px;
+    vertical-align: middle;
+}
+footer ul li:nth-child(1) a {
+    background-image: url(images/L.png); 
+    width: 18px;   
+    background-size: 18px 18px;
+}
+footer ul li:nth-child(2) a {
+    background-image: url(images/L.png);
+    width: 18px; 
+    background-size: 18px 18px;
+
+}
+footer ul li:nth-child(3) a {
+    background-image: url(images/L.png);
+    width: 18px; 
+    background-size: 18px 18px;
+
+}
+footer ul li:nth-child(4) a {
+    background-image: url(images/L.png);   
+    width: 18px;  
+    background-size: 18px 18px;
+
+}
+footer ul li:nth-child(5) a {
+    background-image: url(images/L.png);
+    width: 18px; 
+    background-size: 18px 18px;
+
 }
